# Lc-Management

./: README.md
LC Management Documentation/: airports copy.csv  bash.sh  processed_airports.csv
Migration/: Bank  Book.xlsx  Customer  Homepage Fields  LcInformation  NewLc  TransportInformation
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/2023-08-09-115510_LC-version-1/: down.sql
backend/migrations/2023-08-09-115940_LC-version-2/: down.sql  up.sql
backend/migrations/2024-01-31-135855_LC-version-3/: down.sql  up.sql
backend/migrations/2024-01-31-140033_LC-version-4/: down.sql  up.sql
backend/migrations/2024-02-01-101325_LC-version-5/: down.sql  up.sql
backend/migrations/2024-02-21-073326_LC-version-6/: down.sql  up.sql
backend/migrations/2024-02-23-103118_LC-version-7/: down.sql  up.sql
backend/migrations/2024-03-06-060830_LC-version-8/: down.sql  up.sql
backend/migrations/2024-03-11-125336_LC-version-10/: down.sql  up.sql
backend/migrations/2024-03-11-125336_LC-version-9/: down.sql  up.sql
backend/src/: main.rs
backend/src/api/: api.rs
backend/src/models/: admin.rs  airport_model.rs  bank_info.rs  courier_info.rs  csc_city.rs  csc_country.rs  csc_state.rs  currency_model.rs  customer_info.rs  date_info.rs  iata_model.rs  lc_info.rs  lc_search_bank.rs  lc_search_customer.rs  lc_search_full.rs  list_admins.rs  mod.rs  new_airport_model.rs  new_bank.rs  new_courier_info.rs  new_customer.rs  new_date_info.rs  new_iata_model.rs  new_lc_info.rs  select_fields.rs
backend/src/repository/: database.rs  schema.rs
frontend/: index.html  (+1 more)
(+132 files in other folders)
