[package]
name = "rust-actix-web-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
# diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid", "128-column-tables"] }
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
rust-argon2 = "1.0"
actix-rt = "0.2.4"
rand = "0.8"
rand_core = "0.6"
actix-session = "0.7.2"
diesel_migrations = "2.1.0"
bigdecimal = "0.4.0"




